feat: CRUD product and functions for stock
